tests/js/error/semantics/builtin_Boolean2.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

var x = new Boolean("");
var __result3 = x.valueOf();
var __expect3 = false;

var __result2 = x.toString();
var __expect2 = "false";
